// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
<div
  class="ant-breadcrumb emotion-0"
  id="default"
/>
`;

exports[`Render properties.list.icon - value[0] 1`] = `
<div
  class="ant-breadcrumb emotion-0"
  id="properties.list.icon"
>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        class="emotion-1"
        data-testid="link-undefined"
        icon="AiOutlineSave"
        id="properties.list.icon_0"
        label="label 1"
      />
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        class="emotion-1"
        data-testid="link-undefined"
        icon="AiOutlineDelete"
        id="properties.list.icon_1"
        label="label 2"
      />
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`Render properties.list.icon with onClick - value[0] 1`] = `
.emotion-1 {
  cursor: pointer;
}

<div
  class="ant-breadcrumb emotion-0"
  id="properties.list.icon with onClick"
>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        class="emotion-1"
        data-testid="link-undefined"
        icon="AiOutlineSave"
        id="properties.list.icon with onClick_0"
        label="label 1"
      />
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        class="emotion-1"
        data-testid="link-undefined"
        icon="AiOutlineDelete"
        id="properties.list.icon with onClick_1"
        label="label 2"
      />
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`Render properties.list.label strings - value[0] 1`] = `
<div
  class="ant-breadcrumb emotion-0"
  id="properties.list.label strings"
>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        class="emotion-1"
        data-testid="link-undefined"
        id="properties.list.label strings_0"
      />
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        class="emotion-1"
        data-testid="link-undefined"
        id="properties.list.label strings_1"
      />
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`Render properties.list.pageId - value[0] 1`] = `
<div
  class="ant-breadcrumb emotion-0"
  id="properties.list.pageId"
>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        class="emotion-1"
        data-testid="link-undefined"
        id="properties.list.pageId_0"
        pageid="page1"
      />
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        class="emotion-1"
        data-testid="link-undefined"
        id="properties.list.pageId_1"
        pageid="page2"
      />
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`Render properties.list.pageId label and url - value[0] 1`] = `
<div
  class="ant-breadcrumb emotion-0"
  id="properties.list.pageId label and url"
>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        class="emotion-1"
        data-testid="link-undefined"
        id="properties.list.pageId label and url_0"
        pageid="page1"
        url="https://www.url.com"
      />
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        class="emotion-1"
        data-testid="link-undefined"
        id="properties.list.pageId label and url_1"
        label="label url"
        url="https://www.url.com"
      />
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        class="emotion-1"
        data-testid="link-undefined"
        id="properties.list.pageId label and url_2"
        label="label pageId"
        pageid="page2"
      />
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        class="emotion-1"
        data-testid="link-undefined"
        id="properties.list.pageId label and url_3"
        pageid="page3"
        url="https://docs.url.com"
      />
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        class="emotion-1"
        data-testid="link-undefined"
        id="properties.list.pageId label and url_4"
        label="label4"
      />
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`Render properties.list.style - value[0] 1`] = `
.emotion-1 {
  color: blue;
}

.emotion-2 {
  color: red;
}

<div
  class="ant-breadcrumb emotion-0"
  id="properties.list.style"
>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        class="emotion-1"
        data-testid="link-undefined"
        id="properties.list.style_0"
        label="Page One"
        style="color: blue;"
      />
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        class="emotion-2"
        data-testid="link-undefined"
        id="properties.list.style_1"
        label="Page two"
        style="color: red;"
      />
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`Render properties.list.url - value[0] 1`] = `
<div
  class="ant-breadcrumb emotion-0"
  id="properties.list.url"
>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        class="emotion-1"
        data-testid="link-undefined"
        id="properties.list.url_0"
        url="https://www.url.com"
      />
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        class="emotion-1"
        data-testid="link-undefined"
        id="properties.list.url_1"
        url="https://docs.url.com"
      />
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`Render properties.separator - value[0] 1`] = `
<div
  class="ant-breadcrumb emotion-0"
  id="properties.separator"
>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        class="emotion-1"
        data-testid="link-undefined"
        id="properties.separator_0"
        label="Page One"
      />
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      -&gt;
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        class="emotion-1"
        data-testid="link-undefined"
        id="properties.separator_1"
        label="Page two"
      />
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      -&gt;
    </span>
  </span>
</div>
`;

exports[`Render properties.style: fontSize: 18 - value[0] 1`] = `
.emotion-0 {
  font-size: 18px;
}

<div
  class="ant-breadcrumb emotion-0"
  id="properties.style: fontSize: 18"
>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        class="emotion-1"
        data-testid="link-undefined"
        id="properties.style: fontSize: 18_0"
        label="Page One"
      />
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        class="emotion-1"
        data-testid="link-undefined"
        id="properties.style: fontSize: 18_1"
        label="Page two"
      />
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`Render required = true default - value[0] 1`] = `
<div
  class="ant-breadcrumb emotion-0"
  id="default"
/>
`;

exports[`Render required = true properties.list.icon - value[0] 1`] = `
<div
  class="ant-breadcrumb emotion-0"
  id="properties.list.icon"
>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        class="emotion-1"
        data-testid="link-undefined"
        icon="AiOutlineSave"
        id="properties.list.icon_0"
        label="label 1"
      />
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        class="emotion-1"
        data-testid="link-undefined"
        icon="AiOutlineDelete"
        id="properties.list.icon_1"
        label="label 2"
      />
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`Render required = true properties.list.icon with onClick - value[0] 1`] = `
.emotion-1 {
  cursor: pointer;
}

<div
  class="ant-breadcrumb emotion-0"
  id="properties.list.icon with onClick"
>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        class="emotion-1"
        data-testid="link-undefined"
        icon="AiOutlineSave"
        id="properties.list.icon with onClick_0"
        label="label 1"
      />
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        class="emotion-1"
        data-testid="link-undefined"
        icon="AiOutlineDelete"
        id="properties.list.icon with onClick_1"
        label="label 2"
      />
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`Render required = true properties.list.label strings - value[0] 1`] = `
<div
  class="ant-breadcrumb emotion-0"
  id="properties.list.label strings"
>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        class="emotion-1"
        data-testid="link-undefined"
        id="properties.list.label strings_0"
      />
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        class="emotion-1"
        data-testid="link-undefined"
        id="properties.list.label strings_1"
      />
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`Render required = true properties.list.pageId - value[0] 1`] = `
<div
  class="ant-breadcrumb emotion-0"
  id="properties.list.pageId"
>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        class="emotion-1"
        data-testid="link-undefined"
        id="properties.list.pageId_0"
        pageid="page1"
      />
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        class="emotion-1"
        data-testid="link-undefined"
        id="properties.list.pageId_1"
        pageid="page2"
      />
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`Render required = true properties.list.pageId label and url - value[0] 1`] = `
<div
  class="ant-breadcrumb emotion-0"
  id="properties.list.pageId label and url"
>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        class="emotion-1"
        data-testid="link-undefined"
        id="properties.list.pageId label and url_0"
        pageid="page1"
        url="https://www.url.com"
      />
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        class="emotion-1"
        data-testid="link-undefined"
        id="properties.list.pageId label and url_1"
        label="label url"
        url="https://www.url.com"
      />
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        class="emotion-1"
        data-testid="link-undefined"
        id="properties.list.pageId label and url_2"
        label="label pageId"
        pageid="page2"
      />
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        class="emotion-1"
        data-testid="link-undefined"
        id="properties.list.pageId label and url_3"
        pageid="page3"
        url="https://docs.url.com"
      />
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        class="emotion-1"
        data-testid="link-undefined"
        id="properties.list.pageId label and url_4"
        label="label4"
      />
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`Render required = true properties.list.style - value[0] 1`] = `
.emotion-1 {
  color: blue;
}

.emotion-2 {
  color: red;
}

<div
  class="ant-breadcrumb emotion-0"
  id="properties.list.style"
>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        class="emotion-1"
        data-testid="link-undefined"
        id="properties.list.style_0"
        label="Page One"
        style="color: blue;"
      />
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        class="emotion-2"
        data-testid="link-undefined"
        id="properties.list.style_1"
        label="Page two"
        style="color: red;"
      />
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`Render required = true properties.list.url - value[0] 1`] = `
<div
  class="ant-breadcrumb emotion-0"
  id="properties.list.url"
>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        class="emotion-1"
        data-testid="link-undefined"
        id="properties.list.url_0"
        url="https://www.url.com"
      />
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        class="emotion-1"
        data-testid="link-undefined"
        id="properties.list.url_1"
        url="https://docs.url.com"
      />
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`Render required = true properties.separator - value[0] 1`] = `
<div
  class="ant-breadcrumb emotion-0"
  id="properties.separator"
>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        class="emotion-1"
        data-testid="link-undefined"
        id="properties.separator_0"
        label="Page One"
      />
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      -&gt;
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        class="emotion-1"
        data-testid="link-undefined"
        id="properties.separator_1"
        label="Page two"
      />
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      -&gt;
    </span>
  </span>
</div>
`;

exports[`Render required = true properties.style: fontSize: 18 - value[0] 1`] = `
.emotion-0 {
  font-size: 18px;
}

<div
  class="ant-breadcrumb emotion-0"
  id="properties.style: fontSize: 18"
>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        class="emotion-1"
        data-testid="link-undefined"
        id="properties.style: fontSize: 18_0"
        label="Page One"
      />
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        class="emotion-1"
        data-testid="link-undefined"
        id="properties.style: fontSize: 18_1"
        label="Page two"
      />
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.list.icon 1`] = `true`;

exports[`Test Schema properties.list.icon 2`] = `null`;

exports[`Test Schema properties.list.icon with onClick 1`] = `true`;

exports[`Test Schema properties.list.icon with onClick 2`] = `null`;

exports[`Test Schema properties.list.label strings 1`] = `true`;

exports[`Test Schema properties.list.label strings 2`] = `null`;

exports[`Test Schema properties.list.pageId 1`] = `true`;

exports[`Test Schema properties.list.pageId 2`] = `null`;

exports[`Test Schema properties.list.pageId label and url 1`] = `true`;

exports[`Test Schema properties.list.pageId label and url 2`] = `null`;

exports[`Test Schema properties.list.style 1`] = `true`;

exports[`Test Schema properties.list.style 2`] = `null`;

exports[`Test Schema properties.list.url 1`] = `true`;

exports[`Test Schema properties.list.url 2`] = `null`;

exports[`Test Schema properties.separator 1`] = `true`;

exports[`Test Schema properties.separator 2`] = `null`;

exports[`Test Schema properties.style: fontSize: 18 1`] = `true`;

exports[`Test Schema properties.style: fontSize: 18 2`] = `null`;
